--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,8 @@ yarn-error.log*
 .env.development.local
 .env.test.local
 .env.production.local
+.env
+secrets.*
 
 # Terraform files and directories
 .terraform
@@ -33,3 +35,8 @@ yarn-error.log*
 
 # system
 .DS_Store
+
+.openzeppelin
+cache
+DuoAssets
+src/artifacts
