--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     ]
   },
   "dependencies": {
+    "@alch/alchemy-web3": "1.1.1",
+    "@openzeppelin/contracts": "4.2.0",
+    "@openzeppelin/contracts-upgradeable": "4.2.0",
+    "@pinata/sdk": "1.1.23",
     "@testing-library/jest-dom": "5.11.10",
     "@testing-library/react": "11.2.6",
     "@testing-library/user-event": "12.8.3",
@@ -21,8 +25,10 @@
     "@types/node": "12.20.10",
     "@types/react": "17.0.3",
     "@types/react-dom": "17.0.3",
+    "@types/react-router": "5.1.16",
     "@typescript-eslint/eslint-plugin": "4.27.0",
     "axios": "0.21.1",
+    "dotenv": "10.0.0",
     "eslint-config-duolingo": "https://duolingo-packages.s3.amazonaws.com/npm/eslint-config-duolingo/eslint-config-duolingo-0.0.7.tgz",
     "eslint-import-resolver-typescript": "2.4.0",
     "eslint-plugin-import": "2.23.4",
@@ -34,11 +40,13 @@
     "eslint-plugin-react-hooks": "4.2.0",
     "eslint-plugin-testing-library": "4.6.0",
     "http-proxy-middleware": "1.3.0",
+    "ipfs-core": "0.8.0",
     "js-base64": "3.6.0",
     "js-cookie": "2.2.1",
     "lottie-web": "5.7.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
     "sass": "1.32.11",
     "typescript": "4.2.4",
@@ -55,5 +63,14 @@
     "test": "react-scripts test"
   },
   "version": "0.1.0",
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "2.0.2",
+    "@openzeppelin/hardhat-upgrades": "1.9.0",
+    "@types/react-router-dom": "5.1.8",
+    "chai": "4.3.4",
+    "ethers": "5.4.1",
+    "hardhat": "2.4.3",
+    "hardhat-contract-sizer": "2.0.3"
+  }
 }
